Added trx test files

--- a/tests/trx-tools.Core.Tests/trx-tools.Core.Tests.csproj
+++ b/tests/trx-tools.Core.Tests/trx-tools.Core.Tests.csproj
@@ -7,4 +7,22 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <None Update="TestFiles\test_2025-02-11_17_41_50.trx">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="TestFiles\test_2025-02-11_17_41_51.trx">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="TestFiles\test_2025-02-11_17_41_51[1].trx">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="TestFiles\test_2025-02-11_17_41_51[2].trx">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="TestFiles\test_2025-02-11_17_41_51[3].trx">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
