--- a/tests/trx-tools.Reporting.Tests/trx-tools.Reporting.Tests.csproj
+++ b/tests/trx-tools.Reporting.Tests/trx-tools.Reporting.Tests.csproj
@@ -19,4 +19,8 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\trx-tools.Reporting\trx-tools.Reporting.csproj" />
+    </ItemGroup>
+
 </Project>
