Improved html reports for failed results

--- a/src/trx-tools.Reporting/trx-tools.Reporting.csproj
+++ b/src/trx-tools.Reporting/trx-tools.Reporting.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\trx-tools.Commands\trx-tools.Commands.csproj" />
+      <ProjectReference Include="..\trx-tools.Commands\trx-tools.Commands.csproj" />
       <ProjectReference Include="..\trx-tools.Core\trx-tools.Core.csproj" />
     </ItemGroup>
 
