--- a/src/trx-tools.Commands/trx-tools.Commands.csproj
+++ b/src/trx-tools.Commands/trx-tools.Commands.csproj
@@ -2,13 +2,13 @@
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
-        <RootNamespace>trx_tools.Commands.Abstraction</RootNamespace>
+        <RootNamespace>trx_tools.Commands</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.2" />
     </ItemGroup>
-
+    
 </Project>
