--- a/.github/workflows/dotnet_release.yml
+++ b/.github/workflows/dotnet_release.yml
@@ -25,6 +25,7 @@ jobs:
         run: dotnet publish ./src/trx-tools.Reporting/trx-tools.Reporting.csproj --configuration Release --output ./publish/linux-x64 --self-contained true --runtime linux-x64
 
       - name: Release files
+        needs: build
         uses: softprops/action-gh-release@v2
         with:
           files: |
