--- a/.github/workflows/dotnet_release.yml
+++ b/.github/workflows/dotnet_release.yml
@@ -1,7 +1,7 @@
 name: .NET Release
   
 permissions:
-  contents: read
+  contents: write
   packages: write
   attestations: write
   id-token: write
