--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,5 +34,18 @@ jobs:
       - name: Build
         run: dotnet build --no-restore --configuration Release
 
-      - name: Test
-        run: dotnet test --no-build --configuration Release --logger GitHubActions
+      - name: Run tests
+        run: dotnet test --logger "trx" --logger "GitHubActions" --results-directory ./TestResults
+
+      - name: Generate report
+        uses: BrammyS/trx-tools@v1
+        with:
+          report-type: html
+          trx-directory: ./TestResults
+          report-file: ./report.html
+
+      - name: Upload Test Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-report
+          path: ./report.html
