--- a/action.yml
+++ b/action.yml
@@ -22,4 +22,6 @@ runs:
   using: 'docker'
   image: 'docker://ghcr.io/brammys/trx-tools.reporting'
   args:
-    - ${{ inputs.report-type }} ${{ inputs.trx-directory }} ${{ inputs.report-file }}
+    - ${{ inputs.report-type }}
+    - ${{ inputs.trx-directory }}
+    - ${{ inputs.report-file }}
