--- a/action.yml
+++ b/action.yml
@@ -20,8 +20,7 @@ inputs:
     default: 'report.html'
 runs:
   using: 'docker'
-#  image: 'docker://ghcr.io/brammys/trx-tools.reporting'
-  image: 'src/trx-tools.Reporting/Dockerfile'
+  image: 'docker://ghcr.io/brammys/trx-tools.reporting'
   args:
     - ${{ inputs.report-type }}
     - ${{ inputs.trx-directory }}
