--- a/.github/workflows/dotnet_release.yml
+++ b/.github/workflows/dotnet_release.yml
@@ -92,13 +92,13 @@ jobs:
           
       - name: Extract Docker metadata
         id: meta
-        uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804
+        uses: docker/metadata-action@5
         with:
           images: ${{ env.REGISTRY }}/${{ env.REPORTING_IMAGE_NAME }}
 
       - name: Build and push image
         id: push
-        uses: docker/build-push-action@471d1dc4e07e5cdedd4c2171150001c434f0b7a4
+        uses: docker/build-push-action@6
         with:
           context: .
           file: ./src/trx-tools.Reporting/Dockerfile
