--- a/.github/workflows/dotnet_release.yml
+++ b/.github/workflows/dotnet_release.yml
@@ -98,7 +98,7 @@ jobs:
 
       - name: Build and push image
         id: push
-        uses: docker/build-push-action@6
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./src/trx-tools.Reporting/Dockerfile
