Update Dependabot configuration for NuGet
Removed assignee and added reviewer for NuGet updates.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,12 +17,11 @@ updates:
   - package-ecosystem: "nuget" # See documentation for possible values
     directory: "/" # Location of package manifests
     target-branch: "dev" # The branch that dependabot will target
+    reviewers:
+      - BrammyS
     schedule:
       interval: "weekly"
     groups:
       nuget-deps:
         patterns:
           - "*"
-
-assignees:
-  - BrammyS
